2006-08-18  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/gimpfu.py (register): derive the menu from the
	label before adding to _registered_plugins_.

	* plug-ins/pygimp/Makefile.am: moved clothify.py to test-scripts,
	it doubles the functionality of script-fu-clothify.

2006-08-17  Sven Neumann  <sven@gimp.org>

	* libgimp/gimppixbuf.[ch]: added a convenience function to create
	a layer from a GdkPixbuf.

	* plug-ins/common/poppler.c
	* plug-ins/common/screenshot.c
	* plug-ins/common/svg.c: use gimp_layer_new_from_pixbuf().

	* libgimp/gimpui.def: updated.

2006-08-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/poppler.c
	* plug-ins/common/screenshot.c
	* plug-ins/common/svg.c: improved progress handling.

2006-08-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/gimpfu.py: added an optional menu parameter to
	the register call to simplify menu registration. Also restored
	menupath specific mangling of the procedure arguments.

	* plug-ins/pygimp/plug-ins/*.py: use the menu parameter instead
	of defining a function to call on query.

	* plug-ins/pygimp/plug-ins/sphere.py: do it old-style here for
	testing.

2006-08-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/siod/sliba.c (aref1): when accessing members
	of tc_byte_array, cast them to guint8.

2006-08-16  Michael Schumacher  <schumaml@cvs.gnome.org>

	* libgimpcolor/gimpcolor.def 
	* libgimpwidgets/gimpwidgets.def: added some missing entries

2006-08-16  Michael Schumacher  <schumaml@cvs.gnome.org>

	* app/Makefile.am: added $(SYMPREFIX) to the -u flags

2006-08-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/gimpmodule.c: added menu_register method.

	* plug-ins/pygimp/plug-ins/*.py: use gimp.menu_register().

2006-08-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/gimpfu.py: allow '-' in procedure and parameter
	names.

	* plug-ins/pygimp/plug-ins/*.py: use canonical procedure and
	parameter names.

2006-08-16  Sven Neumann  <sven@gimp.org>
