@@ -26,10 +26,16 @@ def make_gradient(palette, num_segments, num_colors):
     for color_number in range(0,num_segments):
         if (color_number == num_colors-1):color_number_next = 0
         else: color_number_next = color_number + 1
-        color_left = pdb.gimp_palette_entry_get_color(palette, color_number)
-        color_right = pdb.gimp_palette_entry_get_color(palette, color_number_next)
-        pdb.gimp_gradient_segment_set_left_color(gradient, color_number, color_left, 100.0)
-        pdb.gimp_gradient_segment_set_right_color(gradient, color_number, color_right, 100.0)
+        color_left = pdb.gimp_palette_entry_get_color(palette,
+                                                      color_number)
+        color_right = pdb.gimp_palette_entry_get_color(palette,
+                                                       color_number_next)
+        pdb.gimp_gradient_segment_set_left_color(gradient,
+                                                 color_number, color_left,
+                                                 100.0)
+        pdb.gimp_gradient_segment_set_right_color(gradient,
+                                                  color_number, color_right,
+                                                  100.0)
     pdb.gimp_context_set_gradient(gradient)
     return gradient
 
@@ -39,14 +45,11 @@ def palette_to_gradient_repeating(palette):
     num_segments = num_colors
     make_gradient(palette, num_segments, num_colors)
 
-def query_palette_to_gradient_repeating():
-    pdb.gimp_plugin_menu_register("python-fu-palette-to-gradient-repeating",
-                                  "<Palettes>")
 
 register(
-    "python_fu_palette_to_gradient_repeating",
+    "python-fu-palette-to-gradient-repeating",
     "Palette to gradient.",
-    "Use the colors in the current GIMP palette and make a new gradient.",
+    "Use the colors in the palette to make a new repeating gradient",
     "Carol Spears, reproduced from previous work by Adrian Likins and Jeff Trefftz",
     "Carol Spears",
     "2006",
@@ -54,8 +57,7 @@ register(
     "",
     [(PF_PALETTE,  "palette",      "Name of palette to convert", "")],
     [(PF_GRADIENT, "new_gradient", "Name of the New Gradient:", "")],
-    palette_to_gradient_repeating,
-    on_query=query_palette_to_gradient_repeating)
+    palette_to_gradient_repeating, menu="<Palettes>")
 
 
 def palette_to_gradient(palette):
@@ -67,7 +69,7 @@ def palette_to_gradient(palette):
 register(
     "python-fu-palette-to-gradient",
     "Palette to gradient.",
-    "Use the colors in the current GIMP palette and make a new gradient.",
+    "Use the colors in the palette to make a new gradient",
     "Carol Spears, reproduced from previous work by Adrian Likins and Jeff Trefftz",
     "Carol Spears",
     "2006",
