@@ -1,10 +1,16 @@
 2006-08-18  Sven Neumann  <sven@gimp.org>
 
-	* plug-ins/pygimp/gimpfu.py (register): derive the menu from the
-	label before adding to _registered_plugins_.
+	* plug-ins/pygimp/gimpfu.py (register): derive the menupath from
+	the label before adding to _registered_plugins_.
 
 	* plug-ins/pygimp/Makefile.am: moved clothify.py to test-scripts,
 	it doubles the functionality of script-fu-clothify.
+
+	* plug-ins/pygimp/plug-ins/benchmark-foreground-extract.py
+	* plug-ins/pygimp/plug-ins/foggify.py
+	* plug-ins/pygimp/plug-ins/palette-sort.py
+	* plug-ins/pygimp/plug-ins/palette-to-gradient.py: changed menu
+	registration in some places that I missed earlier.
 
 2006-08-17  Sven Neumann  <sven@gimp.org>
 
